chore: Fix layout scaling and clean up naming

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,14 +119,6 @@ a {
   width: 1538px;
   height: 1030px;
   transform-origin: center center;
-  --drumhaus-padding: 32px;
-  --drumhaus-available-width: calc(100vw - var(--drumhaus-padding));
-  --drumhaus-available-height: calc(100vh - var(--drumhaus-padding));
-  --drumhaus-scale-x: calc(var(--drumhaus-available-width) / 1538px);
-  --drumhaus-scale-y: calc(var(--drumhaus-available-height) / 1030px);
-  --drumhaus-scale-raw: min(var(--drumhaus-scale-x), var(--drumhaus-scale-y));
-  --drumhaus-scale: clamp(0.6, var(--drumhaus-scale-raw), 1);
-  transform: scale(var(--drumhaus-scale));
 }
 
 @media (max-width: 900px) {
@@ -139,9 +131,9 @@ a {
   }
 
   .drumhaus-scale-wrapper {
-    /* Disable scaling on smaller screens and allow scrolling instead */
     transform-origin: top left;
     width: 923px;
     height: 618px;
+    transform: scale(0.6);
   }
 }
